welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:9: error: value || is not a member of Int
	Math.abs(n - 100) || Math.abs(n - 200)
                          ^